--- a/main.html
+++ b/main.html
@@ -30,13 +30,13 @@
 </select><br><br>
 
 		<!--carage-->
-		<label for="carage">Car Age</label>
-		<input id="carage"type="number"min="0"max="20"placeholder="years" required>
-		<input id="carage"type="number"min="0"max="11"placeholder="months"required>
+		<label for="age">Age</label>
+		<input id="age"type="number"min="0"max="20"placeholder="years" required>
+		<input id="age"type="number"min="0"max="11"placeholder="months"required>
 		<br><br>
 		<!--date of birth-->
 		<label for="dob">DOB</label>
-		<input id="dop" type="date" max="2023-01-10"required><br><br>
+		<input id="dob" type="date" max="2023-01-10"required><br><br>
 		<!--password-->
 		<label for="password">Password</label>
 		<input id="password" type="password"required><br><br>
